force-app/main/default/objects/Location__c/fields/city__c.field-meta.xml
<CustomField>
    <fullName>city__c</fullName>
    <description>This field indicates that the city</description>
    <label>city</label>
    <length>10</length>
    <type>Text</type>
</CustomField>