force-app/main/default/objects/Location__c/fields/geo__c.field-meta.xml
<CustomField>
    <fullName>geo__c</fullName>
    <label>geo</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>