force-app/main/default/objects/Location__c/fields/No_of_Manager__c.field-meta.xml
<CustomField>
    <fullName>No_of_Manager__c</fullName>
    <description>This field is to show the no. of manager reporting to this location</description>
    <inlineHelpText>No. of manager reporting to this location</inlineHelpText>
    <label>No.of Manager</label>
    <summaryForeignKey>manager__c.Location__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>