force-app/main/default/objects/Location__c/fields/state__c.field-meta.xml
<CustomField>
    <fullName>state__c</fullName>
    <label>state</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UK</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>UP</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
            <value>
                <fullName>California</fullName>
            </value>
            <value>
                <fullName>Florina</fullName>
            </value>
            <value>
                <fullName>New york</fullName>
            </value>
            <value>
                <fullName>Wahington</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>