force-app/main/default/objects/Location__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>This field indicates that the street</description>
    <label>Street</label>
    <length>10</length>
    <type>Text</type>
</CustomField>